<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/upcomingMv"
            android:orderInCategory="10"
            android:title="@string/upcoming_str"
            app:showAsAction="never|collapseActionView" />

        <item
            android:id="@+id/nowPlayMv"
            android:checked="true"
            android:orderInCategory="10"
            android:title="@string/now_playing_str"
            app:showAsAction="never|collapseActionView" />

        <item
            android:id="@+id/popularMv"
            android:orderInCategory="10"
            android:title="@string/popular_str"
            app:showAsAction="never|collapseActionView" />

        <item
            android:id="@+id/mostRatedMv"
            android:orderInCategory="10"
            android:title="@string/top_rated_str"
            app:showAsAction="never" />
    </group>
</menu>